<?xml version="1.0"?>
<package format="3">
  <name>velocity_smoother</name>
  <version>0.0.1</version>
  <description>The velocity_smoother package</description>
  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>teleop_twist_joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
